# examples

./: .gitignore  Readme.md  dependabot.yaml
.github/: check_connection.aqua  dependabot.yaml  deploy.aqua  download_marine.sh  renovate.json
aqua-examples/aqua-ceramic-integration/services/ceramic-adapter-custom/: Cargo.toml
aqua-examples/aqua-ceramic-integration/services/curl-adapter/: Cargo.toml
aqua-examples/aqua-ipfs-integration/service/: Cargo.toml  Config.toml
aqua-examples/aqua-ipfs-integration/service/scripts/: build.sh
aqua-examples/aqua-ipfs-integration/service/src/: main.rs
aqua-examples/ceramic-demo/services/ceramic-adapter-basic/: Cargo.toml
aqua-examples/ceramic-demo/services/processor/: Cargo.toml  Config.toml
aqua-examples/ceramic-demo/services/processor/scripts/: build.sh
aqua-examples/ceramic-demo/services/processor/src/: main.rs
aqua-examples/decentralized-blockchain-gateway/wasm-modules/eth-rpc/: Cargo.toml  README.md  module.yaml  rust-toolchain.toml  test.sh
aqua-examples/decentralized-blockchain-gateway/wasm-modules/eth-rpc/aqua/: common_calls.aqua  web3_calls.aqua
aqua-examples/decentralized-blockchain-gateway/wasm-modules/eth-rpc/src/: curl_transport.rs  eth_call.rs  lib.rs  main.rs  typed.rs  values.rs
aqua-examples/decentralized-blockchain-gateway/wasm-modules/eth-rpc/tests_artifacts/: Config.toml  curl_adapter.wasm
aqua-examples/decentralized-blockchain-gateway/wasm-modules/eth-rpc/workshop/: README.md
aqua-examples/decentralized-blockchain-gateway/wasm-modules/ipfs-cli/: Cargo.toml  module.yaml
aqua-examples/decentralized-blockchain-gateway/wasm-modules/ipfs-cli/src/: main.rs
aqua-examples/decentralized-blockchain-gateway/wasm-modules/utilities/: Cargo.toml  module.yaml
aqua-examples/decentralized-blockchain-gateway/wasm-modules/utilities/src/: main.rs
aqua-examples/drand/services/drand/: Cargo.toml
aqua-examples/drand/services/drand/src/: main.rs  points.rs  randomness.rs  verify.rs
aqua-examples/echo-greeter/utilities/: Cargo.toml  Config.toml
aqua-examples/echo-greeter/utilities/aqua-compiled/: utilities.increment_u32.air  utilities.splitter.air  utilities.splitter_u32.air
aqua-examples/echo-greeter/utilities/scripts/: build.sh
aqua-examples/echo-greeter/utilities/src/: main.rs
aqua-examples/price-oracle/mean_service/: Cargo.toml
aqua-examples/price-oracle/mean_service/src/: main.rs
aqua-examples/price-oracle/price_getter_service/: Cargo.toml
aqua-examples/price-oracle/price_getter_service/src/: main.rs
aqua-examples/vrfun/: .gitignore  Cargo.toml  README.md
aqua-examples/vrfun/aqua/: vrf_calls.aqua
aqua-examples/vrfun/artifacts/: vrfun.wasm
aqua-examples/vrfun/configs/: Config.toml  deployed_services.json  deployment_cfg.json
aqua-examples/vrfun/data/: proof_data.json  run_data.json
aqua-examples/vrfun/scripts/: build.sh
aqua-examples/vrfun/src/: main.rs
archived/multi-service/block_getter/: Cargo.toml
archived/multi-service/block_getter/src/: eth_block_getters.rs
archived/multi-service/ethqlite/: Cargo.toml  Config.toml  build.sh  ethqlite_cfg.json
archived/multi-service/ethqlite/src/: auth.rs
archived/multi-service/extract_miner_address/: Cargo.toml
archived/web3-examples/web3-examples/facade/: Cargo.toml
archived/web3-examples/web3-examples/facade/src/: eth_calls.rs  eth_calls_tests.rs  eth_filter_test.rs  eth_hashers.rs  eth_type_test.rs  main.rs
call_parameters/: Cargo.toml  build.sh  config.json
fluence-cuckoo/cuckoo-filter/: Cargo.toml  Config.toml  build.sh
fluence-cuckoo/cuckoo-filter/air-scripts/: cuckoo_create_cf.clj
fluence-cuckoo/cuckoo-filter/src/: main.rs
fluence-cuckoo/fce-cuckoo/: .gitignore  Cargo.toml  Config.toml  build.sh  cuckoo_cfg.json  fce_cuckoo.toml  test.sh
fluence-cuckoo/fce-cuckoo/air-scripts/: cuckoo_service_info.clj
fluence-cuckoo/fce-cuckoo/src/: main.rs
greeting/: build.sh  (+1 more)
intro/2-marine/: Cargo.toml  Config.toml  build.sh
math256/: .gitignore  Cargo.toml  Config.toml  README.md  build.sh  math256_cfg.json
math256/artifacts/: math256.wasm
math256/scripts/: math.add.air  math.aqua  math.clj  math.square.air  math.sum_square.air
math256/src/: errors.rs  lib.rs  main.rs  math.rs  result.rs  tests.rs
math256/tests/: tests.rs
multi-service/ethqlite/: Cargo.toml  Config.toml  build.sh  ethqlite_cfg.json  sqlite3_cfg.json
multi-service/ethqlite/src/: auth.rs  crud.rs  main.rs  paywall.rs
multi-service/hex_converter/: Cargo.toml
multi-service/hex_converter/src/: main.rs
multi-service/math/: Cargo.toml  README.md  build.sh  math_cfg.json
multi-service/math/scripts/: math.clj
multi-service/math/src/: main.rs
multi-service/sqlite/: Cargo.toml  Config.toml  build.sh  sqlite_cfg.json
multi-service/sqlite/src/: main.rs
quickstart/4-composing-services-with-aqua/adder/: Cargo.toml  Config.toml
quickstart/4-composing-services-with-aqua/adder/configs/: adder_cfg.json
quickstart/4-composing-services-with-aqua/adder/scripts/: build.sh
quickstart/4-composing-services-with-aqua/adder/src/: main.rs
quickstart/4-hosted-services/: .gitignore  Cargo.toml  README.md  my_aqua.aqua
quickstart/4-hosted-services/configs/: Config.toml  app_config.json  app_config_res.json  character_count_cfg.json
quickstart/4-hosted-services/scripts/: build.sh
quickstart/4-hosted-services/src/: main.rs
ts-oracle/: Cargo.toml  Config.toml  Readme.md
ts-oracle/air-scripts/: ts_getter.ts  ts_getter.ts_oracle.air
ts-oracle/aqua-scripts/: ts_getter.aqua
ts-oracle/artifacts/: service_info.txt  ts_cons_cfg.json  ts_oracle_cfg.json
ts-oracle/scripts/: build.sh
ts-oracle/src/: main.rs  stats.rs
vrf-wasm/: Cargo.toml  Config.toml
vrf-wasm/configs/: deployment_cfg.json
vrf-wasm/scripts/: build.sh
vrf-wasm/src/: main.rs
web3-examples/web3-examples/facade/: Cargo.toml
web3-examples/web3-examples/facade/src/: data_processing.rs  data_processing_tests.rs  eth_calls.rs  eth_calls_tests.rs  eth_filter_test.rs  eth_filters.rs  eth_hashers.rs  eth_type_test.rs  eth_utils.rs  fce_results.rs  jsonrpc_helpers.rs  main.rs
(+1037 files in other folders)
