[package]
name = "cuckoo-filter"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "cuckoo_filter"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0.0" }
serde_json = {version = "1.0.62"}
cuckoofilter = {version="0.5.0", features=["serde_support"] }
log = "0.4"
marine-rs-sdk = { version = "0.6.10", features = ["logger"] }
flate2 = "1.0.20"