[package]
name = "fce-cuckoo"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.0" }
serde_json = {version = "1.0.62"}
cuckoofilter ={version="0.5.0", features=["serde_support"] }
log = "0.4"
fluence = { version = "0.2.18", features = ["logger"] }
flate2 = "1.0.20"