[package]
name = "ethqlite"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "ethqlite"
path = "src/main.rs"

[dependencies]
fluence = { version="0.4.2", features = ["logger"]}
log = "0.4.8"
fce-sqlite-connector = "=0.2.0"
serde = {version = "1.0.118",  features=["derive"]}
serde_json = "1.0.64"
once_cell = "1.4.1"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
uuid = {version = "0.8.2", features = ["serde", "v4"] }
