[package]
name = "hex_converter"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluence = { version = "0.2.18", features = ["logger"]}
log = "0.4.8"
serde_json = "1.0.64"
