[package]
name = "sqlite-runner"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "sqlite_runner"
path = "src/main.rs"

[dependencies]
fluence = { version="0.3.3", features = ["logger"]}
log = "0.4.8"
fce-sqlite-connector = "=0.2.0"
serde = {version = "1.0.118",  features=["derive"]}
serde_json = "1.0.64"
once_cell = "1.4.1"