[package]
name = "character_count"
version = "0.1.0"
authors = ["Fluence Labs"]
description = "Count characters in a message"
edition = "2018"
publish = false

[[bin]]
name = "character_count"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.11"

[dev-dependencies]
marine-rs-sdk-test = "0.2.0"
