[package]
name = "utilities"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"
description = "utilities, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "utilities"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.11", features = ["logger"] }
log = "0.4.14"

[dev-dependencies]
marine-rs-sdk-test = "0.2.0"

[dev]
[profile.release]
opt-level = "s"
