[package]
name = "price_getter_service"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"
description = "price-getter-service, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "price_getter_service"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.11"
log = "0.4.14"
picorand = "0.1.1"
fstrings = "0.2.3"
serde_json = "1.0.57"

[dev]
[profile.release]
opt-level = "s"
