[package]
name = "block_getter"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "=0.6.10", features = ["logger"] }
log = "0.4.14"
serde_json = "1.0.64"
fstrings = "0.2.3"
