[package]
name = "ethqlite"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "ethqlite"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.11", features = ["logger"] }
log = "0.4.8"
marine-sqlite-connector = "0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.4.1"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
