[package]
name = "facade"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
fluence = { version = "=0.2.18", features = ["logger"]}
log = "0.4.8"
chrono = "0.4.19"
ethereum-types = "0.11.0"
hex = "0.4.2"
tiny-keccak = {version = "2.0.2", features = ["keccak", "sha3"]}