[package]
name = "processor"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"
description = "processor, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "processor"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.11", features = ["logger"] }
log = "0.4.14"
# eip-712 = { git = "https://github.com/717a56e1/openethereum/", branch = "eip-712-parser", package = "eip-712" }
eip-712 = { path = "/Users/bebo/localdev/openethereum/crates/util/EIP-712" }
rustc-hex = "2.1.0"
serde_json = "1.0.66"
zeroize = "1.4.1"
validator = "0.8"
chrono = "0.4.19"
libsecp256k1 = "0.6.0"
tiny-keccak = "2.0.2"
hex = "0.4.3"

[dev-dependencies]
marine-rs-sdk-test = "0.1.11"

[dev]
[profile.release]
opt-level = "s"
