[package]
name = "eth-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.18.0", features = [ "wasm" ], default-features = false }
async-std = "1.12.0"
serde_json = "1.0.91"
jsonrpc-core = "18.0.0"