[package]
name = "eth_rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eth_rpc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.18.0", features = [], default-features = false }
#async-std = "1.12.0" # async-std does not support wasm32-wasi
serde_json = "1.0.91"
serde = "1.0.152"
jsonrpc-core = "18.0.0"
tokio = { version = "1.24.1", default-features = false, features = ["rt"] }
eyre = "0.6.8"

marine-rs-sdk = "0.7.1"

[dev-dependencies]
marine-rs-sdk-test = "0.8.2"
