[package]
name = "drand"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"
description = "Drand, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "drand"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
drand-verify = { version = "0.3.0", js = false, optional = false }
hex = "0.4.3"
serde = "1.0.148"
serde_json = "1.0.89"
fff = "0.3.1"
groupy = "0.4.1"
wasm-bindgen = "0.2.83"
paired = "0.22.0"
sha2 = "0.9.9"

[dev-dependencies]
marine-rs-sdk-test = "0.9.0"
hex-literal = "0.3.4"

[dev]
[profile.release]
opt-level = "s"
